--- a/thingspeak-graphing.ipynb
+++ b/thingspeak-graphing.ipynb
@@ -310,6 +310,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Collate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Loading data for venue:  3\n",
+      "Loading data for venue:  7\n",
+      "Loading data for venue:  11\n",
+      "Check\n",
+      "Job Done\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17a5fd453cf44e30917987ee6443b883",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='Venue ID:', options=(3, 7, 11), value=3),)), FigureWidget(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Imports \n",
+    "import ipywidgets as widgets\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go   \n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Get the possible data venues\n",
+    "venuekeysfile = \"venue-keys.csv\"\n",
+    "dfVenueKeys = pd.read_csv(venuekeysfile)\n",
+    "dfVenueKeys = dfVenueKeys.dropna(subset=['channel_id'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#give user option to select their venue\n",
+    "venueDropdown = widgets.Dropdown(\n",
+    "    options=dfVenueKeys['venue_id'],\n",
+    "    value=dfVenueKeys['venue_id'][0],\n",
+    "    description='Venue ID:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "container = widgets.HBox(children=[venueDropdown])\n",
+    "\n",
+    "print(venueDropdown.value)\n",
+    "\n",
+    "#Retrieve the venue and begin graphing\n",
+    "dfCollatedDataSet = pd.DataFrame(columns=['timestamp', 'entry_id', 'temperature', 'rh', 'voltage', 'venue_id'])\n",
+    "for index, venueSensorDetails in dfVenueKeys.iterrows():\n",
+    "    \n",
+    "    sensorMacOfSelection = venueSensorDetails['sensor_MAC']\n",
+    "    dfTempDataSet = pd.read_csv('deviceData/'+ sensorMacOfSelection + '.csv' )\n",
+    "    dfTempDataSet['timestamp'] = pd.to_datetime(dfTempDataSet['timestamp'])\n",
+    "    dfTempDataSet['venue_id'] = venueSensorDetails['venue_id']\n",
+    "\n",
+    "    dfCollatedDataSet = dfCollatedDataSet.append(dfTempDataSet, ignore_index=True)\n",
+    "    dfCollatedDataSet['timestamp'] = pd.to_datetime(dfCollatedDataSet['timestamp'])\n",
+    "    print('Loading data for venue: ', venueSensorDetails['venue_id']) \n",
+    "\n",
+    "\n",
+    "print('Check')\n",
+    "dfCollatedDataSet.sample(6)\n",
+    "\n",
+    "#dfCollatedDataSet.dtypes\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Assign an empty figure widget with two traces\n",
+    "trace0 = go.Scatter(x=dfCollatedDataSet['temperature'], y = dfCollatedDataSet['timestamp'], mode='lines', hoverinfo='all', name='temperature')\n",
+    "#trace1 = go.Scatter(x=dfCollatedDataSet['rh'], mode='lines', hoverinfo='all', name='relative humidity')\n",
+    "\n",
+    "\n",
+    "importantValues = []\n",
+    "importantValues.append({'type': 'line',\n",
+    "                   'xref': 'x',\n",
+    "                   'yref': 'y',\n",
+    "                   'x0': dfCollatedDataSet['timestamp'].min(),\n",
+    "                   'y0': 16,\n",
+    "                   'x1': dfCollatedDataSet['timestamp'].max(),\n",
+    "                   'y1': 16,\n",
+    "                   'line_color': 'red',\n",
+    "                   'line_dash': 'dash',\n",
+    "                   'layer':'below'})\n",
+    "\n",
+    "\n",
+    "annotationsToDraw = []\n",
+    "annotationsToDraw.append({'text': 'Legal indoor temperature for children',\n",
+    "                            'x': dfCollatedDataSet['timestamp'].max(),\n",
+    "                            'y': 16})\n",
+    "\n",
+    "g = go.FigureWidget(data=[trace0],\n",
+    "                    layout = go.Layout(\n",
+    "                        title=dict(\n",
+    "                            text='Temperature for Venue: ' + str(venueDropdown.value)\n",
+    "                        ),   \n",
+    "                        shapes=importantValues,\n",
+    "                        annotations=annotationsToDraw\n",
+    "                        \n",
+    "                       #barmode='lines'                 \n",
+    "                    ))\n",
+    "\n",
+    "\n",
+    "print(\"Job Done\")\n",
+    "\n",
+    "\n",
+    "filter_list = [i for i in dfCollatedDataSet['venue_id'] == venueDropdown.value]\n",
+    "temp_df = dfCollatedDataSet[filter_list]\n",
+    "y1 = temp_df['temperature']\n",
+    "x1 = temp_df['timestamp']\n",
+    "#y2 = temp_df['rh']\n",
+    "#x2 = temp_df['dep_delay']\n",
+    "with g.batch_update():\n",
+    "    g.data[0].y = y1\n",
+    "    g.data[0].x = x1\n",
+    "    #g.data[1].y = y2\n",
+    "    #g.layout.barmode = 'overlay'\n",
+    "    g.layout.xaxis.title = 'Time'\n",
+    "    g.layout.yaxis.title = 'Temperature'\n",
+    "    g.layout.title = \"Temperature for Venue = \" + str(venueDropdown.value)\n",
+    "\n",
+    "\n",
+    "def response(change):\n",
+    "        filter_list = [i for i in dfCollatedDataSet['venue_id'] == venueDropdown.value]\n",
+    "        temp_df = dfCollatedDataSet[filter_list]\n",
+    "        y1 = temp_df['temperature']\n",
+    "        x1 = temp_df['timestamp']\n",
+    "        #y2 = temp_df['rh']\n",
+    "        #x2 = temp_df['dep_delay']\n",
+    "        with g.batch_update():\n",
+    "            g.data[0].y = y1\n",
+    "            g.data[0].x = x1\n",
+    "            #g.data[1].y = y2\n",
+    "            #g.layout.barmode = 'overlay'\n",
+    "            g.layout.xaxis.title = 'Time'\n",
+    "            g.layout.yaxis.title = 'Value'\n",
+    "            g.layout.title = dict(text= 'Temperature for Venue = ' + str(venueDropdown.value))\n",
+    "            # g.add_trace(go.Scatter(x=temp_df['timestamp'], y = 16))\n",
+    "            \n",
+    "\n",
+    "# g.add_hline(y=16, \n",
+    "#             x0=dfCollatedDataSet['timestamp'].min(),\n",
+    "#             x1=dfCollatedDataSet['timestamp'].max(),\n",
+    "#             line_color=\"red\")\n",
+    "venueDropdown.observe(response, names=\"value\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "graphA = widgets.VBox([container, g])\n",
+    "display(graphA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'VBox' object has no attribute 'show'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3612/689420815.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgraphA\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'VBox' object has no attribute 'show'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
